fix footer padding making contents shift

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ li {
 
 
 footer {
-    padding: 10px;
+    padding: 10px 0;
     margin-top: 50px;
     display: flex;
     justify-content: center;
